--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-hot-toast": "^2.3.0",
     "react-query": "^3.39.3",
     "react-textarea-autosize": "^8.3.4",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "viem": "^1.5.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
