--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@farcaster/hub-web": "^0.6.0",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "@noble/ed25519": "^2.0.0",
     "@prisma/client": "^5.1.0",
     "clsx": "^1.2.1",
     "firebase": "^9.9.4",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
+    "react-qr-code": "^2.0.11",
     "react-query": "^3.39.3",
     "react-textarea-autosize": "^8.3.4",
     "swr": "^1.3.0",
