--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@farcaster/hub-nodejs": "^0.10.3",
     "@farcaster/hub-web": "^0.6.0",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
