--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,9 @@
 # DB
 DATABASE_URL="postgresql://postgres:admin@localhost:5432/postgres?schema=public"
 
+
+# Farcaster (optional: only required for writing)
+FC_HUB_URL=
+
 # Dev URL
 NEXT_PUBLIC_URL=http://localhost:3000
