--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "clsx": "^1.2.1",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
+    "lru-cache": "^10.0.1",
+    "metadata-scraper": "^0.2.61",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
