--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "prisma": "^5.1.0",
     "sass": "^1.54.4",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.7.4"
+    "typescript": "^5.0.4"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
