Add env variable for client name

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,11 @@
 # DB
 DATABASE_URL="postgresql://postgres:admin@localhost:5432/postgres?schema=public"
 
-
 # Farcaster (optional: only required for writing)
 FC_HUB_URL=
+
+# Client name (used for signer and client identification)
+NEXT_PUBLIC_FC_CLIENT_NAME=
 
 # Dev URL
 NEXT_PUBLIC_URL=http://localhost:3000
