--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.2.1",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
+    "lodash": "^4.17.21",
     "lru-cache": "^10.0.1",
     "metadata-scraper": "^0.2.61",
     "next": "12.2.4",
@@ -32,15 +33,18 @@
     "react-query": "^3.39.3",
     "react-textarea-autosize": "^8.3.4",
     "swr": "^1.3.0",
+    "validator": "^13.11.0",
     "viem": "^1.5.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/lodash": "^4.14.197",
     "@types/node": "18.6.4",
     "@types/react": "18.0.16",
     "@types/react-dom": "18.0.6",
+    "@types/validator": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.8",
