--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.0.11",
     "@noble/ed25519": "^2.0.0",
     "@prisma/client": "^5.1.0",
+    "@rainbow-me/rainbowkit": "^1.0.9",
     "clsx": "^1.2.1",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
@@ -34,7 +35,8 @@
     "react-textarea-autosize": "^8.3.4",
     "swr": "^1.3.0",
     "validator": "^13.11.0",
-    "viem": "^1.5.4"
+    "viem": "^1.5.4",
+    "wagmi": "^1.3.10"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
