--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "test": "jest --watch",
     "test:ci": "jest --ci",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@farcaster/hub-nodejs": "^0.10.3",
@@ -27,6 +28,7 @@
     "lru-cache": "^10.0.1",
     "metadata-scraper": "^0.2.61",
     "next": "12.2.4",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
