Update .env.sample to include missing keys, add hub-monorepo defaults

--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,14 @@
 # DB
-DATABASE_URL="postgresql://postgres:admin@localhost:5432/postgres?schema=public"
+DATABASE_URL="postgresql://app:password@localhost:6541/hub?schema=public"
 
-# Farcaster (optional: only required for writing)
-FC_HUB_URL=
+# Farcaster Hub (optional: only required for writing)
+# The format is <host>:<port>, do not include the protocol
+FC_HUB_URL=localhost:2283
 
 # Client name (used for signer and client identification)
 NEXT_PUBLIC_FC_CLIENT_NAME=Opencast
 
+# WalletConnectV2 Id (you can get your own @ https://walletconnect.com/)
+NEXT_PUBLIC_WALLETCONNECT_ID=
 # Dev URL
 NEXT_PUBLIC_URL=http://localhost:3000
