Add InsecureHubRpcClient env option for locally running hubs

--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,9 @@ DATABASE_URL="postgresql://app:password@localhost:6541/hub?schema=public"
 # The format is <host>:<port>, do not include the protocol
 FC_HUB_URL=localhost:2283
 
+# If using the hub monorepo this should be set to false unless you setup TLS
+FC_HUB_USE_TLS=false
+
 # Client name (used for signer and client identification)
 NEXT_PUBLIC_FC_CLIENT_NAME=Opencast
 
