Update sample .env file

--- a/.env.sample
+++ b/.env.sample
@@ -1,17 +1,26 @@
-# DB
+## Indexer DB
 DATABASE_URL="postgresql://app:password@localhost:6541/hub?schema=public"
 
-# Farcaster Hub (optional: only required for writing)
+## Farcaster Hub (optional: only required for writing)
 # The format is <host>:<port>, do not include the protocol
-FC_HUB_URL=localhost:2283
-
+FC_HUB_URL="localhost:2283"
 # If using the hub monorepo this should be set to false unless you setup TLS
-FC_HUB_USE_TLS=false
+FC_HUB_USE_TLS="false"
 
-# Client name (used for signer and client identification)
-NEXT_PUBLIC_FC_CLIENT_NAME=Opencast
+## App signer (required for registering new app signer keys)
+# Use your personal mnemonic for running locally
+APP_FID=
+APP_MNENOMIC=
+
+# Client name (only used for frontend aesthetics)
+NEXT_PUBLIC_FC_CLIENT_NAME="Opencast"
+
+## Imgur for image uploads (see https://apidocs.imgur.com)
+NEXT_PUBLIC_IMGUR_CLIENT_ID=
+IMGUR_CLIENT_SECRET=
 
 # WalletConnectV2 Id (you can get your own @ https://walletconnect.com/)
 NEXT_PUBLIC_WALLETCONNECT_ID=
-# Dev URL
+
+# Application URL (used for redirects)
 NEXT_PUBLIC_URL=http://localhost:3000
