Update .env.sample and README.md
Update the DATABASE_URL in .env.sample

The DATABASE_URL in .env.sample was pointing to the wrong database. This commit updates it to point to the correct database.

Also, update the link in README.md

The link in README.md was pointing to the wrong location for setting up the Farcaster PosgreSQL indexer. This commit updates the link to point to the correct location.

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 ## Indexer DB
-DATABASE_URL="postgresql://app:password@localhost:6541/hub?schema=public"
+DATABASE_URL="postgresql://app:password@localhost:6541/replicator?schema=public"
 
 ## Farcaster Hub (optional: only required for writing)
 # The format is <host>:<port>, do not include the protocol
