feat: mod opengraph indexer and embeds

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@farcaster/hub-web": "^0.6.0",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "@mod-protocol/miniapp-registry": "^0.0.2",
+    "@mod-protocol/react": "^0.0.2",
+    "@mod-protocol/react-editor": "^0.0.2",
+    "@mod-protocol/react-ui-shadcn": "^0.0.3",
     "@noble/ed25519": "^2.0.0",
     "@prisma/client": "^5.1.0",
     "@rainbow-me/rainbowkit": "^1.0.9",
