--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@mod-protocol/mod-registry": "*",
     "@mod-protocol/react": "^0.1.0",
     "@mod-protocol/react-editor": "^0.0.3",
-    "@mod-protocol/react-ui-shadcn": "^0.1.0",
+    "@mod-protocol/react-ui-shadcn": "0.1.0",
     "@noble/ed25519": "^2.0.0",
     "@prisma/client": "^5.1.0",
     "@rainbow-me/rainbowkit": "1.0.9",
@@ -78,6 +78,6 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "engines": {
-    "node": "16"
+    "node": ">=18.0.0"
   }
 }
