Installs prisma as @selekt/db

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "db",
+  "name": "@selekt/db",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "prisma/index.ts",
+  "types": "prisma/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push --skip-generate"
   },
   "keywords": [],
   "author": "",
