--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "db:generate": "prisma generate",
     "db:push": "prisma db push --skip-generate",
-    "docker:build": "docker-compose down && docker-compose build --progress plain && docker-compose up"
+    "docker:build": "docker-compose down && docker-compose up",
+    "dev": "pnpm docker:build && db:generate && db:push"
   },
   "keywords": [],
   "author": "",
