--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -23,7 +23,8 @@
     "@mod-protocol/react-editor": "^0.0.3",
     "@mod-protocol/react-ui-shadcn": "^0.1.0",
     "@noble/ed25519": "^2.0.0",
-    "@rainbow-me/rainbowkit": "1.0.9",
+    "@privy-io/react-auth": "^1.54.0",
+    "@privy-io/wagmi-connector": "^0.1.12",
     "@selekt/db": "workspace:*",
     "clsx": "^1.2.1",
     "eslint-config-react-app": "^7.0.1",
