--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,13 +14,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.1.0"
+    "@neondatabase/serverless": "^0.7.2",
+    "@prisma/client": "^5.1.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
+    "@prisma/client": "^5.1.0",
     "@types/node": "^20.11.3",
+    "@types/pg": "^8.10.9",
+    "dotenv": "^16.3.2",
+    "esbuild-register": "^3.5.0",
     "prisma": "^5.8.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "@prisma/client": "^5.1.0"
+    "typescript": "^5.3.3"
   }
 }
