--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/node": "^20.11.5",
+    "knip": "^4.1.0",
     "prettier": "^3.1.1",
-    "turbo": "^1.11.3"
+    "turbo": "^1.11.3",
+    "typescript": "^5.3.3"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
