--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,10 +10,10 @@
     "lint": "next lint && tsc",
     "test": "jest --watch",
     "test:ci": "jest --ci",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "knip": "knip"
   },
   "dependencies": {
-    "@farcaster/core": "^0.13.3",
     "@farcaster/hub-nodejs": "^0.10.3",
     "@farcaster/hub-web": "^0.6.0",
     "@headlessui/react": "^1.7.2",
@@ -22,7 +22,6 @@
     "@mod-protocol/react": "^0.1.0",
     "@mod-protocol/react-editor": "^0.0.3",
     "@mod-protocol/react-ui-shadcn": "^0.1.0",
-    "@noble/ed25519": "^2.0.0",
     "@privy-io/react-auth": "^1.54.0",
     "@privy-io/wagmi-connector": "^0.1.12",
     "@selekt/db": "workspace:*",
@@ -38,18 +37,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.3.0",
-    "react-qr-code": "^2.0.11",
     "react-query": "^3.39.3",
-    "react-textarea-autosize": "^8.3.4",
     "swr": "^1.3.0",
     "validator": "^13.11.0",
     "viem": "^1.5.4",
     "wagmi": "^1.3.10"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/lodash": "^4.14.197",
     "@types/node": "18.6.4",
     "@types/react": "18.2.34",
@@ -65,11 +59,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
-    "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^5.1.0",
     "sass": "^1.54.4",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.4"
