--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -25,14 +25,18 @@
     "@privy-io/react-auth": "^1.54.0",
     "@privy-io/wagmi-connector": "^0.1.12",
     "@selekt/db": "workspace:*",
+    "@tanstack/react-query": "^5.17.19",
+    "@trpc/client": "11.0.0-next-beta.228",
+    "@trpc/next": "11.0.0-next-beta.228",
+    "@trpc/react-query": "11.0.0-next-beta.228",
+    "@trpc/server": "11.0.0-next-beta.228",
     "clsx": "^1.2.1",
-    "eslint-config-react-app": "^7.0.1",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
     "lodash": "^4.17.21",
     "lru-cache": "^10.0.1",
     "metadata-scraper": "^0.2.61",
-    "next": "12.2.4",
+    "next": "14.1.0",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -41,7 +45,8 @@
     "swr": "^1.3.0",
     "validator": "^13.11.0",
     "viem": "^1.5.4",
-    "wagmi": "^1.3.10"
+    "wagmi": "^1.3.10",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.197",
@@ -53,7 +58,6 @@
     "@typescript-eslint/parser": "^5.32.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
     "eslint-import-resolver-typescript": "^3.4.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-react-hooks": "^4.6.0",
