--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@selekt/eslint-config": "workspace:*",
+    "@selekt/typescript-config": "workspace:*",
     "@types/node": "^20.11.5",
     "knip": "^4.1.0",
     "prettier": "^3.1.1",
