--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -49,6 +49,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/lodash": "^4.14.197",
     "@types/node": "18.6.4",
     "@types/react": "18.2.34",
