--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lodash": "^4.17.21",
     "lru-cache": "^10.0.1",
     "metadata-scraper": "^0.2.61",
-    "next": "12.2.4",
+    "next": "^14.1.4",
     "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
