--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@heroicons/react": "^2.0.11",
     "@noble/ed25519": "^2.0.0",
     "@prisma/client": "^5.1.0",
-    "@rainbow-me/rainbowkit": "1.0.9",
+    "@rainbow-me/rainbowkit": "^1.0.9",
     "clsx": "^1.2.1",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
@@ -47,7 +47,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/lodash": "^4.14.197",
     "@types/node": "18.6.4",
-    "@types/react": "18.2.34",
+    "@types/react": "18.0.16",
     "@types/react-dom": "18.0.6",
     "@types/validator": "^13.11.1",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
@@ -67,7 +67,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^5.1.0",
     "sass": "^1.54.4",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.2.4",
     "typescript": "^5.0.4"
   },
   "lint-staged": {
