--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@farcaster/core": "^0.13.3",
     "@farcaster/hub-nodejs": "^0.10.3",
     "@farcaster/hub-web": "^0.6.0",
+    "@frames.js/render": "^0.2.15",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@noble/ed25519": "^2.0.0",
@@ -25,6 +26,7 @@
     "clsx": "^1.2.1",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
+    "frames.js": "^0.17.1",
     "lodash": "^4.17.21",
     "lru-cache": "^10.0.1",
     "metadata-scraper": "^0.2.61",
