feat: upgrade wagmi/rainbowkit, improved onboarding flow, simplify key storage

--- a/.env.sample
+++ b/.env.sample
@@ -29,3 +29,6 @@ NEXT_PUBLIC_WALLETCONNECT_ID=
 
 # Application URL (used for redirects)
 NEXT_PUBLIC_URL=http://localhost:3000
+
+# Indexer API for indexing progress
+INDEXER_API_URL=http://localhost:3005
