--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@heroicons/react": "^2.0.11",
     "@noble/ed25519": "^2.0.0",
     "@prisma/client": "^5.1.0",
-    "@rainbow-me/rainbowkit": "1.0.9",
+    "@rainbow-me/rainbowkit": "^2.1.3",
+    "@tanstack/react-query": "^5.49.2",
     "clsx": "^1.2.1",
     "firebase": "^9.9.4",
     "framer-motion": "^7.2.1",
@@ -40,8 +41,8 @@
     "react-textarea-autosize": "^8.3.4",
     "swr": "^1.3.0",
     "validator": "^13.11.0",
-    "viem": "^1.5.4",
-    "wagmi": "^1.3.10"
+    "viem": "2.x",
+    "wagmi": "^2.10.9"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -71,6 +72,7 @@
     "prisma": "^5.1.0",
     "sass": "^1.54.4",
     "tailwindcss": "^3.2.4",
+    "tsx": "^4.16.2",
     "typescript": "^5.0.4"
   },
   "lint-staged": {
