fix: dockerfile and sample env

--- a/.env.sample
+++ b/.env.sample
@@ -3,9 +3,9 @@ DATABASE_URL="postgres://replicator:password@localhost:6541/replicator?schema=pu
 
 ## Farcaster Hub (optional: only required for writing)
 # The format is <host>:<port>, do not include the protocol
-FC_HUB_URL="localhost:2283"
+FC_HUB_URL="hub-grpc.pinata.cloud"
 # If using the hub monorepo this should be set to false unless you setup TLS
-FC_HUB_USE_TLS="false"
+FC_HUB_USE_TLS="true"
 
 ## App signer (required for registering new app signer keys)
 # Use your personal mnemonic for running locally
